# FastAPI

./: .gitignore  pyproject.toml
app/: .env.template  alembic.ini  main.py  models.py  show_users.py  test.sqlite
app/alembic/: env.py
app/alembic/versions/: 9b8f78190c9a_create_all_tables.py  e2395897c0f0_initial_with_auth.py  e80f1ac15563_add_first_name_and_last_name_to_user.py
app/api/: __init__.py  allergens.py  auth.py  cuisines.py  examples.py  ingredients.py  posts.py  recipes.py  test.py  users.py
app/authentication/schemas/: user.py
app/config/: config.py
app/models/: __init__.py  allergen.py  cuisine.py  db_helper.py  ingredient.py  post.py  recipe.py  users.py
app/task_queue/: __init__.py  broker.py
app/tasks/: __init__.py  generate_recipe.py
