[project]
name = "fast-api1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.18.4",
    "asyncpg>=0.30.0",
    "fastapi>=0.128.0",
    "fastapi-filter[sqlalchemy]>=2.0.1",
    "fastapi-pagination>=0.15.10",
    "fastapi-users[sqlalchemy]>=15.0.4",
    "pydantic-settings>=2.10.1",
    "pydantic[email]>=2.12.5",
    "sqlalchemy[asyncio]>=2.0.43",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
]
